# minitorch-module-2-kd1510

./: README.md  main.py  pyproject.toml
minitorch/: __init__.py  autodiff.py  module.py  operators.py  scalar.py  scalar_functions.py  tensor_data.py  tensor_functions.py  tensor_ops.py
project/: run_scalar.py  run_tensor.py
tests/: test_tensor.py  test_tensor_data.py
